--- a/module_2/public/css/main.css
+++ b/module_2/public/css/main.css
@@ -1,17 +1,25 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
 main {
   padding: 1rem;
+  margin: auto;
+  max-width: 30rem;
 }
 
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: rgb(206, 206, 206);
+  background-color: #00695c;
   padding: 0 1.5rem;
 }
 
@@ -26,12 +34,11 @@ main {
   margin: 0;
   padding: 0;
   display: flex;
-  align-items: center;
 }
 
 .main-header__item {
-  margin: 0;
-  padding: 0 1rem;
+  margin: 0 1rem;
+  padding: 0;
 }
 
 .main-header__item a {
@@ -42,5 +49,87 @@ main {
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active {
-  color: rgb(63, 63, 63);
+  color: #ffeb3b;
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: stretch;
+  box-shadow: 0 0 8px 1px rgb(0, 0, 0, 0.26);
+}
+
+.card {
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+}
+
+.card__header,
+.card__content {
+  padding: 1rem;
+}
+
+.card__header h1,
+.card__content h1,
+.card__content h2,
+.card__content p {
+  margin: 0;
+}
+
+.card__image {
+  width: 100%;
+}
+
+.card__image img {
+  width: 100%;
+}
+
+.card__actions {
+  padding: 1rem;
+  text-align: center;
+}
+
+.card__actions button,
+.card__actions a {
+  margin: 0 0.25rem;
+}
+
+.btn {
+  font: inherit;
+  border: 1px solid #00695c;
+  color: #00695c;
+  background: white;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #00695c;
+  color: white;
+}
+
+.product-form {
+  width: 20rem;
+  max-width: 90%;
+  margin: auto;
+}
+
+.product-item {
+  width: 100%;
+}
+
+.product__title {
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+.product__price {
+  text-align: center;
+  color: #4d4d4d;
+  margin-bottom: 0.5rem;
+}
+
+.product__description {
+  text-align: center;
 }
