--- a/module_2/views/shop.html
+++ b/module_2/views/shop.html
@@ -11,7 +11,7 @@
     <header class="main-header">
       <nav class="main-header__nav">
         <ul class="main-header__item-list">
-          <li class="main-header__item"><a id="test" href="/">Shop</a></li>
+          <li class="main-header__item"><a class="active" href="/">Shop</a></li>
           <li class="main-header__item">
             <a href="/admin/add-product">Add Product</a>
           </li>
@@ -23,5 +23,4 @@
       <p>List of all the products...</p>
     </main>
   </body>
-  <script src="/js/app.js"></script>
 </html>
